@startuml
left to right direction
skinparam classAttributeIconSize 0
hide empty methods

package "model" {
  class Feedback <<entity>> {
    - feedback_id  : int
    - customer_id  : int
    - product_id   : int
    - content      : String
    - image_url    : String
    - status       : String
    - created_at   : Timestamp
    + getters/setters()
  }
}

package "db" {
  class DBContext {
    - conn : Connection
    + getConnection() : Connection
  }
}

package "dao" {
  class FeedbackDAO <<dao>> {
    + findById(id:int) : Feedback
    + existsByIdAndOwner(id:int, ownerId:int) : boolean
    + update(f:Feedback) : boolean
    + softDelete(id:int, ownerId:int) : boolean
  }
}

package "controller" {
  class FeedbackEditServlet <<controller>> {
    - feedbackDAO : FeedbackDAO
    + doPost(req:HttpServletRequest, resp:HttpServletResponse) : void
  }
  class FeedbackDeleteServlet <<controller>> {
    - feedbackDAO : FeedbackDAO
    + doPost(req:HttpServletRequest, resp:HttpServletResponse) : void
  }
}

FeedbackDAO --|> DBContext
FeedbackEditServlet ..> FeedbackDAO
FeedbackDeleteServlet ..> FeedbackDAO
FeedbackDAO ..> Feedback
@enduml
